# NodeWalker

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICK_START.txt  README.md  READY_TO_PUBLISH.md  TOOLS.md  browser_config.json  docker-compose.yml  publish.bat  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: 01_basic_navigation.py  02_form_filling.py  03_web_scraping.py  04_openai_integration.py  05_claude_integration.py  README.md
nodewalker/: __init__.py  __main__.py  server.py
nodewalker/core/: actions.py  browser_launcher.py  cdp_client.py
nodewalker/tools/: executor.py  schemas.py
tests/: test_console_network.py  test_e2e.py  test_new_features.py  test_snapshot.py
